--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "aoc2021"
-version = "0.1.0"
-authors = ["emingk"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+    "2021",
+    "2022",
+]
